k8s/my-python-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app
  labels:
    team: rebels
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      containers:
      - name: my-python-app
        image: registry.digitalocean.com/pbb/my-python-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
