k8s/my-python-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-name-service
  labels:
    team: rebels
spec:
  selector:
    app: my-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
