k8s/my-python-app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-python-app-ingress
  labels:
    team: rebels
spec:
  ingressClassName: nginx
  rules:
    - host: python.209.38.185.12.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-python-name-service
                port:
                  number: 80
